--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.19.2",
-    "ejs": "^3.1.9"
+    "ejs": "^3.1.9",
+    "axios": "^1.5.0"
   }
 }
