--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "ejs": "^3.1.9",
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "sqlite3": "^5.1.6"
   }
 }
