--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.19.2",
-    "ejs": "^3.1.9",
-    "axios": "^1.5.0"
+    "ejs": "^3.1.9"
   }
 }
